# EchoMind

./: .gitignore  CLAUDE.md  EchoMind_MVP汇报报告.md  EchoMind_补充分析.md  PLAN.md  README.en.md  README.md  REDESIGN.md  TODO.md  index.html  logos.md  package.json  pnpm-lock.yaml  vite.config.ts  竞品调研报告-EchoMind.md  竞品调研报告-验证日志.md
.github/workflows/: ci.yml  desktop-release.yml  docker-publish.yml
deploy/: .env.example  docker-compose.yml
deploy/nginx/: certbot-init.sh  nginx.conf
deploy/nginx/conf.d/: bridge.conf.template
docs/: architecture-hybrid-cloud.html  architecture-hybrid-cloud.md
echomind-wechat/: Dockerfile  package-lock.json  package.json  tsconfig.json
echomind-wechat/src/: main.ts  session.ts
echomind-wechat/src/commands/: router.ts
echomind-wechat/src/echomind/: bridge-client.ts  client.ts  types.ts  vision.ts
echomind-wechat/src/wechat/: api.ts  login.ts  media.ts  monitor.ts  sender.ts  token-crypto.ts  types.ts
scripts/: build-sidecars.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/echomind-bridge-server/: Cargo.toml  Dockerfile  build.rs
src-tauri/echomind-bridge-server/src/: auth.rs  config.rs  crypto.rs  db.rs  error.rs  llm.rs  main.rs  pairing.rs  routes.rs  state.rs
src-tauri/echomind-core/: Cargo.toml  build.rs
src-tauri/echomind-core/examples/: dump_settings.rs
src-tauri/echomind-core/src/: file_extractor.rs  lib.rs  web_search.rs
src-tauri/echomind-core/src/agent/: builtin_tools.rs  mod.rs
src-tauri/echomind-core/src/bridge/: client.rs  mod.rs  rules.rs
src-tauri/echomind-core/src/db/: conversations.rs  init.rs  settings.rs  thoughts.rs  vectors.rs
src-tauri/echomind-core/src/llm/: claude.rs  embedding.rs  gemini.rs  local_embedding.rs  mod.rs  openai.rs
src-tauri/echomind-core/src/skills/: mod.rs
src-tauri/echomind-core/tests/: agent_dedup.rs  bridge_sync.rs  embedding_fallback.rs  pinning.rs  thoughts_tree.rs
src-tauri/echomind-core/tests/common/: mod.rs
src-tauri/echomind-server/: Cargo.toml
src-tauri/echomind-server/src/: crypto.rs  main.rs  routes.rs
src-tauri/icons/: icon.icns
src-tauri/skills/: analyze.md  brainstorm.md  rewrite.md  summarize.md  translate.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_cmds.rs  autostart_cmds.rs  bridge_cmds.rs  bridge_hooks.rs  chat_cmds.rs  cloud_bridge_cmds.rs  mod.rs  setting_cmds.rs  skill_cmds.rs  thought_cmds.rs
src-tauri/src/db/: init.rs  mod.rs  thoughts.rs  vectors.rs
src/components/: ApiKeyGuide.tsx  ChatPlanModal.tsx  ConfirmDialog.tsx  EchoMindLogo.tsx  MainLayout.tsx  Onboarding.tsx  RelatedThoughts.tsx  RelatedThoughtsHint.tsx  SelectionBar.tsx  Sidebar.tsx  SummaryModal.tsx  ThoughtCard.tsx  ThoughtDrawer.tsx  ThoughtImage.tsx  ThoughtInput.tsx  ThoughtList.tsx  TitleBar.tsx
src/hooks/: useKeyboardShortcuts.ts
src/i18n/: index.ts
src/lib/: chatExporters.ts  errorMsg.ts  notify.ts  relativeTime.ts  types.ts  updater.ts
src/pages/: ArchivePage.tsx  CaptureWindow.tsx  ChatHubPage.tsx  ChatPage.tsx  CloudBridgePage.tsx  GraphPage.tsx  HomePage.tsx  SearchPage.tsx  SettingsPage.tsx  WeChatBridgePage.tsx
src/stores/: chatStore.ts  graphStore.ts  settingStore.ts  themeStore.ts  thoughtStore.ts
(+3 files in other folders)
