[package]
name = "echomind-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures-util = "0.3"
pdf-extract = "0.7"
base64 = "0.22"
mime_guess = "2.0"
zip = "0.6"
quick-xml = "0.31"
serde_yaml = "0.9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
fastembed = "4"
once_cell = "1"

[build-dependencies]
cc = "1"
