[package]
name = "echomind-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echomind-server"
path = "src/main.rs"

[dependencies]
echomind-core = { path = "../echomind-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
